--- a/src/app/component/tabella-utenti/tabella-utenti.component.html
+++ b/src/app/component/tabella-utenti/tabella-utenti.component.html
@@ -15,7 +15,7 @@
    <th> {{item.email}}</th>
    <th> {{item.citta!.nome}}</th>
 
-   <div ><a href="#/Utent?param={{item.id}}"><button name ="Modifica Utente" value="modifica" (click)="SavedId(item.id!)" >Modifica</button></a></div>
+   <div ><a href="#/Utent?param={{item.id}}"><button name ="Modifica Utente" value="Elimina" (click)="SavedId(item.id!)" >Elimina</button></a></div>
 
 </tr>
    
